# Data-Science-with-ML-Projects

./: .gitignore  Prompt.md  Summary.md  runtime.txt
Deep_Learning/ANN/: ANN_01.ipynb
Deep_Learning/ANN/Project/: ANN_Implementation.ipynb  Help.md  ann_laptop_price_model.keras  app.py  cat_col.pkl  num_col.pkl  requirements.txt  scaler.pkl
Deep_Learning/CNN/First_Project/: CNN_Implementation.ipynb  (+2 more)
Deep_Learning/RNN/: RNN_01.ipynb
Generative_AI/: main.py
Generative_AI/Chatbot/: Readme.md  Utils.py  app.py  chatbot.py
Generative_AI/LangChain/: app.py  main.py
Generative_AI_YouTube/: requirements.txt
Generative_AI_YouTube/Part_Three/: owntool.py  toolcalling.py
Generative_AI_YouTube/Part_Two/: DataBase.py
MLOPS/DOCKER/: pyproject.toml  requirements.txt
MLOPS/FAST_API/fastapi-ecomerce/: main.py  pyproject.toml  requirements.txt
MLOPS/FAST_API/fastapi-ecomerce/app/: app.py  main.py
MLOPS/FAST_API/fastapi-ecomerce/app/data/: product.json
MLOPS/FAST_API/fastapi-ecomerce/app/service/: products.py
MLOPS/GHA/: README.md
MLOPS/KUBERNATES/: Dockerfile  app.py  deployment.yaml  service.yaml
MLOPS/MLFLOW/: requirements.txt
ML_Models/KMeans_Clustering/: DB_Scan.ipynb
ML_Models/Logistic Regression/: app.py
ML_Models/Naive Bayes/: naive_bayes_model.joblib  naivebayesproject.ipynb
ML_Models/UnSupervised_Learning/: Hierarchial.ipynb  KMeans.ipynb
Ml Models/Logistic Regression/: Help.md  logistic_Que.ipynb  logistic_model.pkl  scaler.pkl
Ml Models/Naive Bayes/: Help.md  app.py  feature_columns.joblib
Numpy/Numpy Project/: Solution.py  app.py
(+93 files in other folders)
