[project]
name = "fastapi-ecomerce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "docker>=7.1.0",
    "evidently>=0.7.21",
    "fastapi>=0.138.1",
    "gunicorn>=26.0.0",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "loguru>=0.7.3",
    "mlflow>=3.14.0",
    "numpy>=2.4.6",
    "pandas>=2.3.3",
    "prometheus-client>=0.25.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
